@@ -68,6 +68,8 @@ Renaming Tokenizer to Lexer
 Renaming Compiler to Parser
 New AjTalk.Compiler namespace
 New AjTalk.Language namespace
+New folders in tests
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
